1.4/_sources/push/index.rst.txt
.. _firstexample:

一个示例学会VBOX
================


一个构造沙箱试验仿真的完整流程：

- 生成。生成颗粒集合体，定义颗粒的材料参数，让其在重力作用下沉积，形成初始模型。
- 挤压。给定墙相应的速度，开始挤压。

下面是一个最简单的挤压计算实例，26行命令即可完成该计算。学会了该命令脚本，基本掌握VBOX的使用方法。

使用 ``Xshell`` 登陆南京大学高性能计算中心集群，运行 ``push.py`` 脚本::

   vboxdaily push.py


``push.py`` 中完整脚本命令如下

.. literalinclude::  /push/push.py

计算结束后，将得到以下结果：

.. figure:: /push/colorbar.png
  :width: 60%
  :align: center

.. only:: html

   .. figure:: /push/shearSS.gif
      :width: 60%
      :align: center

.. figure:: /push/10km.png
  :width: 60%
  :align: center

  **单位(km)**


**颗粒参数表**

+---------------+----------------------------+--------------+---------------------------+-----------+
| 颗粒直径      | 颗粒密度                   | 颗粒摩擦系数 | 缩短速率                  | 时间步    |
+---------------+----------------------------+--------------+---------------------------+-----------+
| :math:`d (m)` | :math:`ρ(kg \cdot m^{-3})` | :math:`\mu`  | :math:`v(m \cdot s^{-1})` | :math:`s` |
+===============+============================+==============+===========================+===========+
| 60，80        | 2500                       | 0.3          | 2.0                       |  0.05     | 
+---------------+----------------------------+--------------+---------------------------+-----------+




